@@ -509,7 +509,6 @@
  Rf_unbindVar
  Rf_unpromiseArgs
  Rf_usemethod
- Rf_utf8toucs
  Rf_utf8toucs32
  Rf_vectorIndex
  Rf_wcs4toutf8
@@ -1657,7 +1656,6 @@
  tzname
  tzset
  unregisterBase
- utf8clen
  wgl_hist_init
  wgl_hist_next
  wgl_hist_prev
